# modern.cpp.core

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: integrate.yml  linux-codeql.yml  linux.yml  macos-codeql.yml  macos.yml  windows-codeql.yml  windows.yml
cmake/: README.md  checks.cmake  clang_warnings.cmake  coverage.cmake  create_package.cmake  documentation.cmake  doxygen.cmake  env.cmake  find_package.cmake  gcc_warnings.cmake  msvc_warnings.cmake  policy.cmake  sanitizer_options.cmake  sanitizers.cmake  test_options.cmake
cmake/fetch/: abseil.cmake  doxygen-awesome-css.cmake  magic_enum.cmake
docs/: Doxyfile.in  corefoundation-doxygen-web.tag.xml  cppreference-doxygen-web-outdated-but-complete.tag  cppreference-doxygen-web.tag.xml  footer.html  header.html  post_doxygen.py
examples/: CMakeLists.txt
examples/command/: CMakeLists.txt  main.cpp
examples/cpuinfo/: CMakeLists.txt  main.cpp
examples/double/: CMakeLists.txt  main.cpp
examples/logger/: CMakeLists.txt  main.cpp
examples/pipe/: CMakeLists.txt  main.cpp
examples/threadqueue/: CMakeLists.txt  Item.h  main.cpp
examples/time/: CMakeLists.txt  main.cpp
examples/timer/: CMakeLists.txt  main.cpp
examples/timing/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  CPU.cpp  CPU.h  CPUID.h  Demangle.cpp  Demangle.h  Double.cpp  Double.h  DoubleExtras.cpp  DoubleExtras.h  DoubleUtils.cpp  DoubleUtils.h  Exec.cpp  Exec.h  KeyState.cpp  KeyState.h  Keyboard.cpp  Keyboard.h  Logger.cpp  Logger.h  Logger_any.h  Logger_container.h  Logger_enum.h  ModernCppCore.h  Serial.cpp  Serial.h  StringExtra.cpp  StringExtra.h  StringExtras.cpp  StringExtras.h  StringUtils.cpp  StringUtils.h  StringUtils_apple.cpp  StringUtils_apple.h  Timestamp.cpp  Timestamp.h  Timing.cpp  Timing.h
source/templates/: CSVWriter.h  Cpp23.h  FloatingPoint.cpp  FloatingPoint.h  InstanceBase.h  Line.h  Point.h  Rect.cpp  Rect.h  SharedQueue.h  Singleton.h  SingletonBase.h  Size.h  Timer.h  TypeCheck.h
source/unixservice/: main.cpp
tests/: CMakeLists.txt  test_csv.cpp  test_demangle.cpp  test_double_utils.cpp  test_floating_point.cpp  test_format.cpp  test_line.cpp  test_magic_enum.cpp  test_point.cpp  test_rect.cpp  test_size.cpp  test_string_utils.cpp
tests/demangle/: CMakeLists.txt  Test_Demangle.cpp
tests/double_utils/: CMakeLists.txt  Test_DoubleUtils.cpp
tests/string_utils/: CMakeLists.txt  Test_StringUtils.cpp
tests/template/: test_main_cppunit.cpp  test_main_googletest.cpp
